# hipace

./: .gitignore  .mailmap  .readthedocs.yml  .zenodo.json  CMakeLists.txt  README.md  legal.txt  license.txt  maxwell_build.bash
.github/: pull_request_template.md
.github/workflows/: cuda.yml  cudaLocal.yml  hip.yml  (+6 more)
cmake/: HiPACEFunctions.cmake
doc/: Doxyfile  equations_hipace.tex  optimizations.txt  requirements.txt
docs/: Doxyfile  equations_hipace.tex  optimizations.txt  requirements.txt
examples/: inputs  inputs_normalized  show.py
src/: AdaptiveTimeStep.H  AdaptiveTimeStep.cpp  CMakeLists.txt  Constants.H  Hipace.H  Hipace.cpp  HipaceProfilerWrapper.H  HipaceVersion.H.in  HipaceVersion.cpp  PhysConst.H  PlasmaParticleContainer.H  main.cpp
src/diagnostics/: CMakeLists.txt  Diagnostic.H  Diagnostic.cpp  FieldDiagnostic.H  FieldDiagnostic.cpp  OpenPMDWriter.H  OpenPMDWriter.cpp
src/fields/: CMakeLists.txt  Fields.H  Fields.cpp  OpenBoundary.H
src/fields/fft/: WrapCuFFT.cpp
src/fields/fft_poisson_solver/: CMakeLists.txt  FFTPoissonSolver.H  FFTPoissonSolver.cpp  FFTPoissonSolverDirichlet.H  FFTPoissonSolverDirichlet.cpp  FFTPoissonSolverDirichletDirect.H  FFTPoissonSolverDirichletDirect.cpp  FFTPoissonSolverDirichletExpanded.H  FFTPoissonSolverDirichletExpanded.cpp  FFTPoissonSolverDirichletFast.H  FFTPoissonSolverDirichletFast.cpp  FFTPoissonSolverPeriodic.H  FFTPoissonSolverPeriodic.cpp  FFTPoissonSolverUtil.H  FFTPoissonSolverUtil.cpp  MGPoissonSolverDirichlet.H  MGPoissonSolverDirichlet.cpp
src/fields/fft_poisson_solver/fft/: AnyDST.H  AnyFFT.H  CMakeLists.txt  CuFFTUtils.H  CuFFTUtils.cpp  RocFFTUtils.H  RocFFTUtils.cpp  WrapCuDST.cpp  WrapCuDST.h  WrapCuFFT.cpp  WrapDSTW.cpp  WrapDSTW.h  WrapFFTW.cpp  WrapGPUDST.cpp  WrapRocDST.cpp  WrapRocDST.h  WrapRocFFT.cpp  WrapcuDST.cpp
src/fields/fft_poisson_solver/fft_old/: AnyDST.H  AnyFFT.H  CuFFTUtils.H  WrapRocFFT.cpp
src/fields/filters/: BilinearFilter.cpp  CMakeLists.txt  Filter.cpp
src/laser/: CMakeLists.txt  Laser.H  Laser.cpp  MultiLaser.H  MultiLaser.cpp
src/mg_solver/: CMakeLists.txt  HpMultiGrid.H  HpMultiGrid.cpp
src/particles/: BeamParticleContainer.H  BeamParticleContainer.cpp  BeamParticleContainerInit.cpp  BinSort.H  BinSort.cpp  BoxSort.H  BoxSort.cpp  CMakeLists.txt  ComputeTemperature.H  Constant.H  CoulombCollision.H  CoulombCollision.cpp  ElasticCollisionPerez.H  ExternalFields.H  MultiBeam.H  MultiBeam.cpp  MultiBeamParticleContainer.H  MultiBeamParticleContainer.cpp  MultiPlasma.H  MultiPlasma.cpp  MultiPlasmaParticleContainer.H  MultiPlasmaParticleContainer.cpp  ParticleUtil.H  PlasmaParticleContainer.H  PlasmaParticleContainer.cpp  PlasmaParticleContainerInit.cpp  ShapeFactors.H  ShuffleFisherYates.H  SliceSort.H  SliceSort.cpp  TileSort.H  TileSort.cpp  UpdateMomentumPerez.H
src/particles/beam/: BeamParticleContainer.H  BeamParticleContainer.cpp  BeamParticleContainerInit.cpp  CMakeLists.txt  MultiBeam.H  MultiBeam.cpp
src/particles/collisions/: CMakeLists.txt  ComputeTemperature.H  CoulombCollision.H  CoulombCollision.cpp  ElasticCollisionPerez.H  UpdateMomentumPerez.H
src/particles/deposition/: BeamDepositCurrent.H  BeamDepositCurrent.cpp  BeamDepositCurrentInner.H  CMakeLists.txt  CurrentDeposition.H  DepositCurrent.H  DepositionUtil.H  ExplicitDeposition.H  ExplicitDeposition.cpp  PlasmaDepositCurrent.H  PlasmaDepositCurrent.cpp  PlasmaDepositCurrentInner.H
src/particles/particles_utils/: FieldGather.H  ParticleUtil.H  ShapeFactors.H
src/particles/plasma/: CMakeLists.txt  MultiPlasma.H  MultiPlasma.cpp  PlasmaParticleContainer.H  PlasmaParticleContainer.cpp  PlasmaParticleContainerInit.cpp
src/particles/profiles/: CMakeLists.txt  GetInitialDensity.H  GetInitialDensity.cpp  GetInitialMomentum.H  GetInitialMomentum.cpp
src/particles/pusher/: BeamParticleAdvance.H  BeamParticleAdvance.cpp  CMakeLists.txt  ExternalFields.H  FieldGather.H  GetAndSetPosition.H  GetDomainLev.H  PlasmaParticleAdvance.H  PlasmaParticleAdvance.cpp  PlasmaParticlePusher.H  PlasmaParticlePusher.cpp  PushPlasmaParticles.H  UpdateForceTerms.H
src/particles/sorting/: BoxSort.H  BoxSort.cpp  CMakeLists.txt  SliceSort.H  SliceSort.cpp  TileSort.H  TileSort.cpp
src/salame/: CMakeLists.txt  Salame.H  Salame.cpp
src/utils/: AdaptiveTimeStep.H  AdaptiveTimeStep.cpp  AtomicWeightTable.H  CMakeLists.txt  Constants.H  Constants.cpp  DeprecatedInput.H  DualNumbers.H  GPUUtil.H  GridCurrent.H  GridCurrent.cpp  HipaceProfilerWrapper.H  HipaceProfilerWrapper.cpp  IOUtil.H  IOUtil.cpp  InsituUtil.H  IonizationEnergiesTable.H  Laser.cpp  MakeOpenBoundary.py  MultiBuffer.H  MultiBuffer.cpp  OMPUtil.H  Parser.H  Parser.cpp  TemplateUtil.H  atomic_data.txt  relative_atomic_masses.txt  write_atomic_data_cpp.py  write_atomic_weight_cpp.py
tests/: adaptive_time_step.1Rank.sh  beam_evolution.1Rank.sh  beam_in_vacuum.SI.1Rank.sh  beam_in_vacuum.SI.Serial.sh  beam_in_vacuum.normalized.1Rank.sh  beam_in_vacuum.normalized.2Rank.sh  beam_in_vacuum.normalized.Serial.sh  beam_in_vacuum_open_boundary.normalized.1Rank.sh  blowout_wake.1Rank.sh  blowout_wake.2Rank.sh  blowout_wake.Serial.sh  blowout_wake_explicit.2Rank.sh  can_beam.1Rank.sh  can_beam.2Rank.sh  can_beam.Serial.sh  collisions.SI.1Rank.sh  collisions_beam.SI.1Rank.sh  from_file.SI.1Rank.sh  from_file.normalized.1Rank.sh  gaussian_blowout_wake.1Rank.sh  gaussian_linear_wake.SI.1Rank.sh  gaussian_linear_wake.normalized.1Rank.sh  gaussian_weight.1Rank.sh  grid_current.1Rank.sh  hosing.2Rank.sh  ion_motion.SI.1Rank.sh  ionization.2Rank.sh  laser_STC.SI.1Rank.sh  laser_blowout_wake_explicit.1Rank.sh  laser_blowout_wake_explicit.SI.1Rank.sh  laser_evolution.SI.1Rank.sh  laser_evolution.SI.2Rank.sh  laser_init_check_chirp.1Rank.sh  laser_init_check_chirp.sh  linear_wake.1Rank.sh  linear_wake.SI.1Rank.sh  linear_wake.normalized.1Rank.sh  linear_wake.normalized.2Rank.sh  next_deposition_beam.2Rank.sh  output_coarsening.2Rank.sh  (+9 more)
tools/: analysis.py  convert_hipace_to_hipace++_file.py  data_00000.h5  read_insitu_diagnostics.py  visualize.ipynb  write_beam.py
(+148 files in other folders)
